Util: Add math.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ src/Menu/MenuState.cpp
 src/Menu/MenuState.hpp
 src/Util/Camera.cpp
 src/Util/Camera.hpp
+src/Util/math.hpp
 src/Util/unused.hpp
 )
 
