Move editor's CMake build script out to src/Editor/CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(BossBrawl)
 cmake_minimum_required(VERSION 2.8.8)
 
+option(BUILD_EDITOR "Build the editor. Requires Qt" OFF)
+
 # Find SFML
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/Modules" ${CMAKE_MODULE_PATH})
 find_package(SFML 2 COMPONENTS graphics window audio system REQUIRED)
@@ -42,44 +44,11 @@ src/Util/view.hpp
 
 target_link_libraries(bossbrawl ${SFML_LIBRARIES})
 
-# Find Qt
-
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-find_package(Qt5Widgets REQUIRED)
-
-
-qt5_wrap_ui(UIS_HDRS
-src/Editor/layersettings.ui
-)
-
-add_executable(brawledit
-src/Editor/editor.cpp
-src/Editor/layersettings.cpp
-src/Editor/layertab.cpp
-src/Editor/layerwidget.cpp
-src/Editor/main.cpp
-src/Editor/sfmlwidget.cpp
-src/Editor/tilewidget.cpp
-src/Map/TileMap.cpp
-src/Map/Layer.cpp
-${UIS_HDRS}
-)
-
-find_package(X11)
-
-if(X11_FOUND)
-    set_target_properties(brawledit PROPERTIES COMPILE_DEFINITIONS BRAWL_X11)
-endif()
-
-qt5_use_modules(brawledit Widgets)
-
-target_link_libraries(brawledit ${QT_LIBRARIES} ${SFML_LIBRARIES})
-
 # Add additional flags to gcc and clang
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     set_target_properties(bossbrawl PROPERTIES COMPILE_FLAGS "-std=c++11 -pedantic -Wall -Wextra -Wshadow")
-    # Don't Add -Wshadow to brawledit, as Qt has some nasty hard to avoid shadowing problems
-    set_target_properties(brawledit PROPERTIES COMPILE_FLAGS "-std=c++11 -pedantic -Wall -Wextra")
+endif()
+
+if(${BUILD_EDITOR})
+    add_subdirectory(src/Editor)
 endif()
