Rearrange source tree to better match the logical layout of the project
The two main modules are Game and Editor.
The two common modules that can be used by both are Map and Util

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,44 +9,52 @@ find_package(SFML 2 COMPONENTS graphics window audio system REQUIRED)
 include_directories(${SFML_INCLUDE_DIR})
 include_directories(src)
 
-add_executable(bossbrawl
-src/Core/State.hpp
-src/Core/config.cpp
-src/Core/config.hpp
-src/Core/graphics.cpp
-src/Core/graphics.hpp
-src/Core/main.cpp
-src/Core/stateDriver.cpp
-src/Core/stateDriver.hpp
-src/Game/GameState.cpp
-src/Game/GameState.hpp
-src/Gui/IconButton.cpp
-src/Gui/IconButton.hpp
-src/Gui/TextButton.cpp
-src/Gui/TextButton.hpp
-src/Gui/VerticalScrollBar.cpp
-src/Gui/VerticalScrollBar.hpp
-src/Gui/Widget.cpp
-src/Gui/Widget.hpp
+add_library(map
 src/Map/Layer.cpp
 src/Map/Layer.hpp
 src/Map/TileMap.cpp
 src/Map/TileMap.hpp
-src/Menu/MenuState.cpp
-src/Menu/MenuState.hpp
-src/Menu/OptionsMenuState.cpp
-src/Menu/OptionsMenuState.hpp
+)
+
+add_library(util
 src/Util/math.hpp
 src/Util/unused.hpp
 src/Util/view.cpp
 src/Util/view.hpp
 )
 
-target_link_libraries(bossbrawl ${SFML_LIBRARIES})
+include_directories(src/Game)
+
+add_executable(bossbrawl
+src/Game/Core/State.hpp
+src/Game/Core/config.cpp
+src/Game/Core/config.hpp
+src/Game/Core/graphics.cpp
+src/Game/Core/graphics.hpp
+src/Game/Core/main.cpp
+src/Game/Core/stateDriver.cpp
+src/Game/Core/stateDriver.hpp
+src/Game/GameState.cpp
+src/Game/GameState.hpp
+src/Game/Gui/IconButton.cpp
+src/Game/Gui/IconButton.hpp
+src/Game/Gui/TextButton.cpp
+src/Game/Gui/TextButton.hpp
+src/Game/Gui/VerticalScrollBar.cpp
+src/Game/Gui/VerticalScrollBar.hpp
+src/Game/Gui/Widget.cpp
+src/Game/Gui/Widget.hpp
+src/Game/Menu/MenuState.cpp
+src/Game/Menu/MenuState.hpp
+src/Game/Menu/OptionsMenuState.cpp
+src/Game/Menu/OptionsMenuState.hpp
+)
+
+target_link_libraries(bossbrawl map util ${SFML_LIBRARIES})
 
 # Add additional flags to gcc and clang
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    set_target_properties(bossbrawl PROPERTIES COMPILE_FLAGS "-std=c++11 -pedantic -Wall -Wextra -Wshadow")
+    set_target_properties(bossbrawl map PROPERTIES COMPILE_FLAGS "-std=c++11 -pedantic -Wall -Wextra -Wshadow")
 endif()
 
 if(${BUILD_EDITOR})
