Added Entity file for shared collision/Enemy Class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,15 @@ src/Game/Menu/MenuState.cpp
 src/Game/Menu/MenuState.hpp
 src/Game/Menu/OptionsMenuState.cpp
 src/Game/Menu/OptionsMenuState.hpp
+
+
+src/Game/Entity.cpp
+src/Game/Entity.hpp
+
 src/Game/Player.cpp
 src/Game/Player.hpp
+src/Game/Enemy.cpp
+src/Game/Enemy.hpp
 )
 
 target_link_libraries(bossbrawl map util ${SFML_LIBRARIES})
