--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(BossBrawl)
 cmake_minimum_required(VERSION 2.8.12.1)
 
+option(BUILD_GAME   "Build the game." ON)
 option(BUILD_EDITOR "Build the editor. Requires Qt" OFF)
 
 # Detect compiler
@@ -28,68 +29,5 @@ endif()
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/Modules" ${CMAKE_MODULE_PATH})
 find_package(SFML 2 COMPONENTS graphics window audio system REQUIRED)
 include_directories(${SFML_INCLUDE_DIR})
-include_directories(src)
 
-add_library(map
-src/Map/Layer.cpp
-src/Map/Layer.hpp
-src/Map/TileMap.cpp
-src/Map/TileMap.hpp
-)
-
-add_library(util
-src/Util/collision.cpp
-src/Util/collision.h
-src/Util/math.hpp
-src/Util/unused.hpp
-src/Util/view.cpp
-src/Util/view.hpp
-)
-
-add_library(entities
-src/Entities/DefaultEnemy.cpp
-src/Entities/DefaultEnemy.hpp
-src/Entities/Enemy.cpp
-src/Entities/Enemy.hpp
-src/Entities/Entity.cpp
-src/Entities/Entity.hpp
-src/Entities/EntityContainer.cpp
-src/Entities/EntityContainer.hpp
-src/Entities/Player.cpp
-src/Entities/Player.hpp
-)
-
-include_directories(src/Game)
-
-add_executable(bossbrawl
-src/Game/Core/State.hpp
-src/Game/Core/config.cpp
-src/Game/Core/config.hpp
-src/Game/Core/graphics.cpp
-src/Game/Core/graphics.hpp
-src/Game/Core/main.cpp
-src/Game/Core/stateDriver.cpp
-src/Game/Core/stateDriver.hpp
-src/Game/GameState.cpp
-src/Game/GameState.hpp
-src/Game/Gui/IconButton.cpp
-src/Game/Gui/IconButton.hpp
-src/Game/Gui/TextButton.cpp
-src/Game/Gui/TextButton.hpp
-src/Game/Gui/UI.cpp
-src/Game/Gui/UI.hpp
-src/Game/Gui/VerticalScrollBar.cpp
-src/Game/Gui/VerticalScrollBar.hpp
-src/Game/Gui/Widget.cpp
-src/Game/Gui/Widget.hpp
-src/Game/Menu/MenuState.cpp
-src/Game/Menu/MenuState.hpp
-src/Game/Menu/OptionsMenuState.cpp
-src/Game/Menu/OptionsMenuState.hpp
-)
-
-target_link_libraries(bossbrawl map entities util ${SFML_LIBRARIES})
-
-if(${BUILD_EDITOR})
-    add_subdirectory(src/Editor)
-endif()
+add_subdirectory(src)
