Editor: Rename source files of SFMLWidget to match new naming convention

--- a/src/Editor/CMakeLists.txt
+++ b/src/Editor/CMakeLists.txt
@@ -15,9 +15,9 @@ LayerTabWidget.cpp
 LayerTabWidget.hpp
 LayerWidget.cpp
 LayerWidget.hpp
+SFMLWidget.cpp
+SFMLWidget.hpp
 main.cpp
-sfmlwidget.cpp
-sfmlwidget.h
 tilewidget.cpp
 tilewidget.h
 ${UIS_HDRS}
