Move bottom bar code from MainWidget to new class 'BottomBarWidget'

--- a/src/Editor/CMakeLists.txt
+++ b/src/Editor/CMakeLists.txt
@@ -7,6 +7,8 @@ LayerSettingsDialog.ui
 )
 
 add_executable(brawledit
+BottomBarWidget.cpp
+BottomBarWidget.hpp
 LayerItemWidget.cpp
 LayerItemWidget.hpp
 LayerListWidget.cpp
