src/CMakeLists.txt Only build editor if BUILD_EDITOR is defined

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 include_directories(Common)
 add_subdirectory(Common)
 add_subdirectory(Game)
-add_subdirectory(Editor)
+if(BUILD_EDITOR)
+	add_subdirectory(Editor)
+endif()
 
